// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLI overrides take precedence 1`] = `
"/* eslint-disable */

function f() {
        console.log(
                \\"should have tab width 8\\"
        );
}
\\"use strict\\";

module.exports = {
        tabWidth: 8
};
/* eslint-disable */

function f() {
  console.log(
    \\"should have no semicolons\\"
  )
}
/* eslint-disable */

function f() {
   console.log(
      \\"should have tab width 3\\"
   );
}
/* eslint-disable */

function f() {
  console.log.apply(
    null,
    [
      'this file',
      'should have trailing comma',
      'and single quotes',
    ],
  );
}
"
`;

exports[`resolves configuration from external files 1`] = `
"/* eslint-disable */

function f() {
        console.log(\\"should have tab width 8\\");
}
\\"use strict\\";

module.exports = {
        tabWidth: 8
};
/* eslint-disable */

function f() {
  console.log(\\"should have no semicolons\\")
}
/* eslint-disable */

function f() {
   console.log(\\"should have tab width 3\\");
}
/* eslint-disable */

function f() {
  console.log.apply(null, [
    'this file',
    'should have trailing comma',
    'and single quotes',
  ]);
}
"
`;
